@@ -35,8 +35,8 @@ class TestXamax {
             kArgXInc,
             kArgXOffset, kArgImaxOffset};
   }
-  static std::vector<std::string> BuffersIn() { return {kBufVecX, kBufScalar}; }
-  static std::vector<std::string> BuffersOut() { return {kBufScalar}; }
+  static std::vector<std::string> BuffersIn() { return {kBufVecX, kBufScalarUint}; }
+  static std::vector<std::string> BuffersOut() { return {kBufScalarUint}; }
 
   // Describes how to obtain the sizes of the buffers
   static size_t GetSizeX(const Arguments<T> &args) {
@@ -73,13 +73,13 @@ class TestXamax {
       auto queue_plain = queue();
       auto event = cl_event{};
       auto status = Amax<T>(args.n,
-                            buffers.scalar(), args.imax_offset,
+                            buffers.scalar_uint(), args.imax_offset,
                             buffers.x_vec(), args.x_offset, args.x_inc,
                             &queue_plain, &event);
       if (status == StatusCode::kSuccess) { clWaitForEvents(1, &event); clReleaseEvent(event); }
     #elif CUDA_API
       auto status = Amax<T>(args.n,
-                            buffers.scalar(), args.imax_offset,
+                            buffers.scalar_uint(), args.imax_offset,
                             buffers.x_vec(), args.x_offset, args.x_inc,
                             queue.GetContext()(), queue.GetDevice()());
       cuStreamSynchronize(queue());
@@ -93,7 +93,7 @@ class TestXamax {
       auto queue_plain = queue();
       auto event = cl_event{};
       auto status = clblasXamax<T>(args.n,
-                                   buffers.scalar, args.imax_offset,
+                                   buffers.scalar_uint, args.imax_offset,
                                    buffers.x_vec, args.x_offset, args.x_inc,
                                    1, &queue_plain, 0, nullptr, &event);
       clWaitForEvents(1, &event);
@@ -105,7 +105,7 @@ class TestXamax {
   #ifdef CLBLAST_REF_CBLAS
     static StatusCode RunReference2(const Arguments<T> &args, BuffersHost<T> &buffers_host, Queue &) {
       cblasXamax(args.n,
-                 buffers_host.scalar, args.imax_offset,
+                 buffers_host.scalar_uint, args.imax_offset,
                  buffers_host.x_vec, args.x_offset, args.x_inc);
       return StatusCode::kSuccess;
     }
@@ -115,7 +115,7 @@ class TestXamax {
   #ifdef CLBLAST_REF_CUBLAS
     static StatusCode RunReference3(const Arguments<T> &args, BuffersCUDA<T> &buffers, Queue &) {
       auto status = cublasXamax(reinterpret_cast<cublasHandle_t>(args.cublas_handle), args.n,
-                                buffers.scalar, args.imax_offset,
+                                buffers.scalar_uint, args.imax_offset,
                                 buffers.x_vec, args.x_offset, args.x_inc);
       if (status == CUBLAS_STATUS_SUCCESS) { return StatusCode::kSuccess; } else { return StatusCode::kUnknownError; }
     }
@@ -123,8 +123,9 @@ class TestXamax {
 
   // Describes how to download the results of the computation (more importantly: which buffer)
   static std::vector<T> DownloadResult(const Arguments<T> &args, Buffers<T> &buffers, Queue &queue) {
-    std::vector<T> result(args.scalar_size, static_cast<T>(0));
-    buffers.scalar.Read(queue, args.scalar_size, result);
+    std::vector<unsigned int> result_uint(args.scalar_size, 0);
+    buffers.scalar_uint.Read(queue, args.scalar_size, result_uint);
+    std::vector<T> result(args.scalar_size, static_cast<T>(result_uint[0]));
     return result;
   }
 
